--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,35 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@100;200;300;400;500;700&display=swap');
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+@layer base {
   body {
-    color: white;
-    background: black;
+    font-family: 'Raleway', sans-serif;
+
+    background-color: black;
+    background-image: linear-gradient(to bottom, black 0%, black 33%, transparent 100%), url("/images/hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;
+  }
+
+  @media (min-width: 640px) {
+    body {
+      background-image: linear-gradient(to left, transparent 0%, black 22.5%, black 100%), url("/images/hero.jpg");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: right center center center;
+    }
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: 'Playfair Display', serif;
   }
 }
