--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,8 @@
 
   body {
     font-family: "Raleway", sans-serif;
+
+    background-color: black;
   }
 
   #hero {
@@ -25,6 +27,20 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right bottom;
+  }
+
+  #appointment {
+    background-color: beige;
+    background-image: linear-gradient(
+        35deg,
+        transparent 0%,
+        beige 42%,
+        beige 100%
+      ),
+      url("/images/appointment.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
   }
 
   @media (min-width: 640px) {
