--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,4 +58,25 @@
       background: none;
     }
   }
+
+  /* 2560px (1440p) */
+  @media screen and (min-width: 160em) {
+    html {
+      font-size: clamp(1em, 1em + 1vw, 1.5em);
+    }
+  }
+
+  /* 3200px ( (1440p + 4K) / 2 ) */
+  @media screen and (min-width: 200em) {
+    html {
+      font-size: clamp(1em, 1em + 1vw, 1.75em);
+    }
+  }
+
+  /* 3840px (4K) */
+  @media screen and (min-width: 240em) {
+    html {
+      font-size: clamp(1em, 1em + 1vw, 2em);
+    }
+  }
 }
