--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@
         black 33%,
         transparent 100%
       ),
-      url("/images/hero.avif");
+      url('/images/hero.avif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right bottom;
@@ -33,7 +33,7 @@
         beige 42%,
         beige 100%
       ),
-      url("/images/appointment.avif");
+      url('/images/appointment.avif');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left center;
@@ -47,7 +47,7 @@
           black 22.5%,
           black 100%
         ),
-        url("/images/hero.avif");
+        url('/images/hero.avif');
       background-attachment: fixed;
       background-repeat: no-repeat;
       background-size: contain;
